--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,18 +38,16 @@ header nav {
 header nav ul {
   list-style-type: none;
 }
-/* added all the a selector property values into here */
+
 header nav ul li {
   display: inline-block;
   margin-left: 25px;
+}
+
+a {
   color: #ffffff;
   text-decoration: none;
 }
-
-/* a {
-  color: #ffffff;
-  text-decoration: none;
-} */
 /* because all the p font size is 16px, i added that into all, other font size can be superceded. */
 /* p {
   font-size: 16px;
@@ -168,7 +166,17 @@ header nav ul li {
   color: #ffffff;
 }
 
-.search-engine-optimization img {
+/* merged this section img propety values to here */
+.content img {
+  max-height: 200px;
+}
+
+/* merged all h2 property values to here */
+.content h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+/* .search-engine-optimization img {
   max-height: 200px;
 }
 
@@ -178,9 +186,9 @@ header nav ul li {
 
 .social-media-marketing img {
   max-height: 200px;
-}
+} */
 
-.search-engine-optimization h2 {
+/* .search-engine-optimization h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
@@ -193,7 +201,7 @@ header nav ul li {
 .social-media-marketing h2 {
   margin-bottom: 20px;
   font-size: 36px;
-}
+} */
 
 footer {
   padding: 30px;
