--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,16 @@ a {
   max-width: 150px;
 } */
 
-.search-engine-optimization {
+.content article {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+
+/* .search-engine-optimization {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -164,7 +173,7 @@ a {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #0072bb;
   color: #ffffff;
-}
+} */
 
 /* merged this section img propety values to here */
 .content img {
